<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <!--
        <Button
        android:id="@+id/load"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:text="@string/load" />
        -->

        <Button
            android:id="@+id/get_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:text="@string/getid" />

        <Button
            android:id="@+id/check"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:text="@string/check" />

        <Button
            android:id="@+id/clean"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:text="@string/clean" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/textview_top"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:textSize="20dp"
            android:text="@string/device_code_defult"
            android:singleLine="true" />

        <Button
            android:id="@+id/cp_rt"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/copy"
            android:enabled="false" />
    </LinearLayout>

    <TextView
        android:id="@+id/textview"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:scrollbarFadeDuration="1000"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="vertical"
        android:text="" />

</LinearLayout>